# lulu-logs-rust

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  tag.yml
schema/: lulu_logs.fbs
src/: client.rs  error.rs  lib.rs  lulu_export_generated.rs  lulu_logs_generated.rs  models.rs  publisher.rs  rand_util.rs  recorder.rs  scenario.rs  serializer.rs  source.rs  span.rs  step.rs  terminal_logger.rs  topic.rs
