[package]
name = "lulu-logs-client"
version = "0.1.0"
edition = "2021"
description = "MQTT client library for the lulu-logs protocol"
default-run = "lulu-inject"

[[bin]]
name = "lulu-inject"
path = "src/bin/inject.rs"

[[bin]]
name = "lulu-terminal"
path = "src/bin/terminal.rs"

[dependencies]

# Error handling
anyhow = "1.0"

# Byte buffer manipulation
bytes = "1.11.0"

# Timestamps ISO 8601
chrono = { version = "0.4", features = ["serde"] }

# FlatBuffers runtime
flatbuffers = "24.3.25"

# MQTT async client
rumqttc = "0.25.0"

# Random string generation
rand = "0.8.5"

# JSON serialization (pulse payload)
serde_json = "1"

# Async runtime
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }

# Trace instrumentation
tracing = "0.1"

# Embedded MQTT broker (used by the recorder feature)
rumqttd = { git = "https://github.com/Panduza/rumqtt", tag = "0.1.0" }

[dev-dependencies]
tempfile = "3"
